# replayable-rag-triage

./: .env.example  .gitignore  README.md  kb_articles.json  pyproject.toml  run_classification.py  run_pipeline.py  run_retrieval.py  tickets.json  validate.py
docs/: CONTRACTS.md  plan.md
src/rag_triage/: __init__.py  classification.py  common.py  config.py  drafting.py  escalation.py  local_replay.py  retrieval.py  schemas.py  search.py  stage_machine.py  validation.py
tests/: test_classification.py  test_contracts.py  test_phase3.py  test_retrieval.py  test_stage_machine.py
